--- a/style.css
+++ b/style.css
@@ -13,7 +13,7 @@ body,html {
 .keys {
   display: flex;
   flex: 1;
-  min-height: 100vh;
+  min-height: 85vh;
   align-items: center;
   justify-content: center;
 }
@@ -48,4 +48,46 @@ kbd {
   text-transform: uppercase;
   letter-spacing: .1rem;
   color: #ffc600;
+}
+
+
+/* Footer  */
+
+.footer {
+  background: black;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  height: 15vh;
+  padding: 0px 50px;
+  color: rgba(0,0,0,0.3);
+  font-size: 2rem;
+  
+}
+.footer-links {
+  display: flex;
+  align-items: center; 
+  font-size: 28px;
+}
+.footer-links a {
+  color: whitesmoke;
+  text-decoration: none;
+  padding: 0px 10px;
+  
+}
+.footer-links a:hover {
+  opacity: 1;
+  color: #487DB1;
+}
+.footer .fa-heart {
+  color: #D23333;
+}
+.footer .fa-ice-cream {
+  color: #f9f871;
+}
+.footer-copyright {
+  color: whitesmoke;
+}
+.vanilla-ice-cream-img {
+  width: 28px;
 }
